--- a/MvcMovie/Views/Movies/Details.cshtml
+++ b/MvcMovie/Views/Movies/Details.cshtml
@@ -33,6 +33,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
         </dd>
+        <dd class="col-sm-2">
+            @Html.DisplayFor(model => model.Rating)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
