--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -41,9 +41,11 @@
                 @Html.DisplayNameFor(model => model.Movies![0].Genre)
             </th>
             <th>
+                @Html.DisplayNameFor(Model => Model.Movies![0].Rating)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Movies![0].Price)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -58,6 +60,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Genre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
